# esscvp-2025

./: Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
machine_learning/miniprojects/: Breast Tissue.ipynb  Cancer.ipynb  Cardiotocography.ipynb  Framingham.ipynb  Heart Disease.ipynb  Human Activity Recognition.ipynb  Parkinsons.ipynb  SPECT Heart .ipynb
machine_learning/miniprojects/Data/: DSF.csv
machine_learning/supervised/: open_exercises.md
machine_learning/supervised/assignments/: clf_decision_tree.ipynb  clf_knn.ipynb  clf_logistic_regression.ipynb  clf_naive_bayes.ipynb  clf_random_forest.ipynb  clf_svm.ipynb  rgr_ensemble_stacking.ipynb  rgr_linear_regression.ipynb  rgr_random_forest.ipynb
machine_learning/unsupervised/: helper.py  kmeans.ipynb  pca.ipynb  pca_requirements.txt
