[tool.poetry]
name = "mlops-cookiecutter-data-science"
version = "1.0.0"
description = "This project template combines simplicity, best practice for folder structure and good OOP design. The main idea is that there's much same stuff you do every time when you start your machine learning project, so wrapping all this shared stuff will help you to change just the core idea every time you start a new project."
authors = ["Tomas Pereira <>"]
readme = "README.md"
license = "LICENSE.md"
homepage = "https://bitbucket.fraunhofer.pt/projects/IS2020/repos/mlops-cookiecutter-data-science/browse"
repository = "https://bitbucket.fraunhofer.pt/projects/IS2020/repos/mlops-cookiecutter-data-science/browse"

[tool.poetry.dependencies]
python = ">=3.8.16"
cookiecutter = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
black = "^23.11.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.7.1"
pytest = "^7.4.3"
safety = "^2.3.5"
pytest-cov = "^4.1.0"
pytest-cookies = "^0.7.0"
pandas = "*"
seaborn = "^0.13.0"
commitizen = "^3.13.0"
cz-bitbucket-jira-conventional = {git = "https://bitbucket.fraunhofer.pt/scm/is2020/mlops-commit-drafter.git", rev = "v1.0.3"}

[tool.black]
line-length = 120
color = true
target-version = ['py38']
include = '\.pyi?$'

[tool.commitizen]
name = "cz_bitbucket_jira_conventional"
jira_base_url = "https://jira.fraunhofer.pt"
bitbucket_repo = "mlops-cookiecutter-data-science"
bitbucket_project = "IS2020"
version = "1.0.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "VERSION"
]
bump_message = "bump: release $current_version → $new_version [skip-ci]"
update_changelog_on_bump = true
changelog_incremental = true
unreleased_version = "v1.0.0"
annotated_tag = true
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]

[tool.isort]
py_version = 38
profile = "black"
skip_gitignore = true
line_length = 120
multi_line_output = 3
atomic = true
include_trailing_comma = true
color_output = true

[tool.bandit]
targets = ["{{cookiecutter.project_slug}}/src"]
# (optional) list included test IDs here, eg '[B101, B406]':
tests = ["B201", "B301"]
# (optional) list skipped test IDs here, eg '[B101, B406]':
skips = ["B101", "B601"]

[tool.pytest.ini_options]
minversion = "7.4.3"
addopts = [
    "-ra",
    "--doctest-modules",
    "--strict-config",
    "--strict-markers",
]
doctest_optionflags = "NORMALIZE_WHITESPACE"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
